--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mssql": "^10.0.2",
     "node-windows": "^1.0.0-beta.8",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "request": "^2.88.2"
   },
   "prettier": {
     "tabWidth": 4
