--- a/web_client/.gitignore
+++ b/web_client/.gitignore
@@ -100,9 +100,8 @@ dist
 # vuepress build output
 .vuepress/dist
 
-# vuepress v2.x temp and cache directory
+# vuepress v2.x temp and cache directory (cache already excluded by .gitignore)
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -143,11 +142,3 @@ dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
